fix(css): aligns embeds and makes titles smaller

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -14,7 +14,7 @@ body
 // main heading
 h1
 	text-align: center
-	font-size: 3em
+	font-size: 2.5em
 	margin-top: 1.75em
 	margin-bottom: 0
 
@@ -50,7 +50,7 @@ a:hover
 // center align video embeds
 iframe
 	display: block
-	margin: auto
+	margin: auto !important
 	width: 750px
 	height: 350px
 	margin: 20px
